--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <p>Reemplaza este párrafo con un texto que complemente a la bajada. Puedes extender este párrafo hasta las doscientas palabras.</p>
 
-                    <img src="img/infografia.png" class="w-100 shadow my-4" alt="describir la infografía" />
+                    <img src="img/Europe’s vaccine hesitancy.png" class="w-100 shadow my-4" alt="describir la infografía" />
                 </div>
             </div>
         </header>
