--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                         <!--primera fuente-->
                         <div class="col-sm-6">
                             <div class="card shadow-sm">
-                                <img src="img/reemplazar-tipografias.png" class="card-img-top" alt="describir la imagen" />
+                                <img src="img/Freight Regular.png" class="card-img-top" alt="describir la imagen" />
                                 <div class="card-body">
-                                    <h4 class="card-title">Reemplaza con su nombre</h4>
+                                    <h4 class="card-title">Freight Regular</h4>
                                     <p class="card-text">Reemplaza con una descripción breve.</p>
                                 </div>
                             </div>
@@ -78,9 +78,9 @@
                         <!--segunda fuente-->
                         <div class="col-sm-6">
                             <div class="card shadow-sm">
-                                <img src="img/reemplazar-tipografias.png" class="card-img-top" alt="describir la imagen" />
+                                <img src="img/Knowledge Medium.png" class="card-img-top" alt="describir la imagen" />
                                 <div class="card-body">
-                                    <h4 class="card-title">Reemplaza con un nombre</h4>
+                                    <h4 class="card-title">Knowledge Medium</h4>
                                     <p class="card-text">Reemplaza con una descripción breve.</p>
                                 </div>
                             </div>
