--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="#" class="link-light">Reemplaza esto con tu Nombre y Apellido</a>
+                        <a href="https://github.com/MagdalenaAchondo" class="link-light">Magdalena Achondo Jiménez</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-1/" class="link-light">Infografía Digital</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-1/tree/main/clase-04" class="d-none d-lg-inline link-light">Lunes 13 de septiembre, 2021</a>
                     </p>
