--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <script>
             // Reemplaza los colores dentro del paréntesis cuadrado, respetando las comillas.
             // Si necesitas que un color ocupe más espacio en la paleta: debes repetirlo.
-            var colores = ["#EE665B", "#00A1EB", "#F4C100", "#FFFFFF"];
+            var colores = ["#EE665B", "#00A1EB", "#F4C100", "89DAFF", "999999", "#FFFFFF"];
             // No reemplaces nada de lo que sigue.
             var n = colores.length;
             var w = 100 / n;
