--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <script>
             // Reemplaza los colores dentro del paréntesis cuadrado, respetando las comillas.
             // Si necesitas que un color ocupe más espacio en la paleta: debes repetirlo.
-            var colores = ["#333333", "#777777", "#AAAAAA", "#CCCCCC", "#CCCCCC", "#EEEEEE", "#FFFFFF", "#FFFFFF", "#FFFFFF"];
+            var colores = ["#EE665B", "#F4C100", "#89DAFF", "#00A1EB", "#999999", "#FFFFFF"];
             // No reemplaces nada de lo que sigue.
             var n = colores.length;
             var w = 100 / n;
