--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
                     <div id="carouselExampleCaptions" class="carousel slide mx-5" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/reemplazar-graficos.png" class="d-block w-100" alt="..." />
+                                <img src="img/grafico1.png" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption d-none d-md-block">
                                     <h4>Gráfico figurativo</h4>
                                     <p>Explica brevemente por qué se trata de un gráfico figurativo</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/reemplazar-graficos.png" class="d-block w-100" alt="..." />
+                                <img src="img/grafico2.png" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption d-none d-md-block">
                                     <h4>Gráfico mixto</h4>
                                     <p>Explica brevemente por qué se trata de un gráfico mixto</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/reemplazar-graficos.png" class="d-block w-100" alt="..." />
+                                <img src="img/grafico3.png" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption d-none d-md-block">
                                     <h4>Gráfico no figurativo</h4>
                                     <p>Explica brevemente por qué se trata de un gráfico no figurativo</p>
