--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
                     <h2 class="fs-6 mb-5 text-center text-uppercase">Magdalena Achondo Jiménez</h2>
 
                     <p class="lead">
-                        Aquí va la bajada (un sumario del asunto con elementos que sirven de gancho de lectura; ojalá un solo párrafo). En este y todos los reemplazos, respeta los colores del código fuente en tu editor. Los colores son
-                        indicaciones.
+                        La siguiente infografía trata sobre como Europa se está enfrentando a una tercera ola de contagios y muertes a causa del coronavirus, y se ve afectado por la lenta vacunación de la población.
                     </p>
 
-                    <p>Reemplaza este párrafo con un texto que complemente a la bajada. Puedes extender este párrafo hasta las doscientas palabras.</p>
+                    <p>Esta fue publicada en Graphics Reuters el 1 de Abril del 2021, y se puede encontrar en el siguiente link https://graphics.reuters.com/HEALTH-CORONAVIRUS/EU-VACCINES/qmypmrelyvr/</p>
 
                     <img src="img/Europe’s vaccine hesitancy.png" class="w-100 shadow my-4" alt="describir la infografía" />
                 </div>
