--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         La siguiente infografía trata sobre como Europa se está enfrentando a una tercera ola de contagios y muertes a causa del coronavirus, y se ve afectado por la lenta vacunación de la población.
                     </p>
 
-                    <p>Esta fue publicada en Graphics Reuters el 1 de Abril del 2021, y se puede encontrar en el siguiente link https://graphics.reuters.com/HEALTH-CORONAVIRUS/EU-VACCINES/qmypmrelyvr/</p>
+                    <p>Esta fue publicada en Graphics Reuters el 1 de Abril del 2021, y se puede encontrar en el siguiente link:
+                        https://graphics.reuters.com/HEALTH-CORONAVIRUS/EU-VACCINES/qmypmrelyvr/</p>
 
                     <img src="img/Europe’s vaccine hesitancy.png" class="w-100 shadow my-4" alt="describir la infografía" />
                 </div>
