--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <img src="img/Freight Regular.png" class="card-img-top" alt="describir la imagen" />
                                 <div class="card-body">
                                     <h4 class="card-title">Freight Regular</h4>
-                                    <p class="card-text">Reemplaza con una descripción breve.</p>
+                                    <p class="card-text">Diseñada por Joshua Darden. Utilizada en el texto de la página</p>
                                 </div>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                                 <img src="img/Knowledge Medium.png" class="card-img-top" alt="describir la imagen" />
                                 <div class="card-body">
                                     <h4 class="card-title">Knowledge Medium</h4>
-                                    <p class="card-text">Reemplaza con una descripción breve.</p>
+                                    <p class="card-text">Utilizada en los títulos para que estos destaquen del resto del texto.</p>
                                 </div>
                             </div>
                         </div>
