--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
                             <div class="carousel-item active">
                                 <img src="img/grafico1.png" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h4>Gráfico figurativo</h4>
-                                    <p>Explica brevemente por qué se trata de un gráfico figurativo</p>
+                                    <h4>Gráfico de líneas</h4>
+                                    <p>Muestra el aumento del porcentaje de la población vacunada </p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/grafico2.png" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h4>Gráfico mixto</h4>
-                                    <p>Explica brevemente por qué se trata de un gráfico mixto</p>
+                                    <h4>Gráfico temporal</h4>
+                                    <p>Muestra una línea temporal con eventos importantes</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/grafico3.png" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h4>Gráfico no figurativo</h4>
-                                    <p>Explica brevemente por qué se trata de un gráfico no figurativo</p>
+                                    <h4>Gráfico de barras</h4>
+                                    <p>Compara el porcentaje de la población vacunada entre tres países</p>
                                 </div>
                             </div>
                         </div>
